<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_register"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fff"
    tools:context="com.example.ayesha.fyp.Register"
    android:weightSum="1">


    <ImageView
        android:layout_marginTop="20dp"
        android:layout_width="222dp"
        android:layout_height="60dp"
        android:layout_marginLeft="70dp"
        android:src="@drawable/aid_first"
        android:layout_marginBottom="25dp"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColorHint="#28b463"
        android:textColor="#17202A"
        android:background="@drawable/edittext_border"

        android:inputType="textPersonName"
        android:id="@+id/name"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="20dp"
        android:hint="@string/name"
        android:layout_weight="0.05" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/edittext_border"
        android:textColorHint="#28b463"
        android:textColor="#17202A"
        android:inputType="textPersonName"
        android:id="@+id/username"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="20dp"
        android:hint="@string/username"
        android:layout_weight="0.04" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/edittext_border"
        android:textColorHint="#28b463"
        android:textColor="#17202A"
        android:inputType="textEmailAddress"
        android:id="@+id/email"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="20dp"
        android:hint="@string/email"
        android:layout_weight="0.05" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColorHint="#28b463"
        android:textColor="#17202A"
        android:background="@drawable/edittext_border"

        android:inputType="textPassword"
        android:id="@+id/password"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="20dp"
        android:hint="@string/password"
        android:layout_weight="0.08" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColorHint="#28b463"
        android:textColor="#17202A"
        android:background="@drawable/edittext_border"

        android:inputType="textPassword"
        android:id="@+id/confirmpass"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="20dp"
        android:hint="@string/confirm_password"
        android:layout_weight="0.06" />
    <Button
        android:id="@+id/register"
        android:background="#28b463"
        style="?android:textAppearanceSmall"
        android:textColor="#ffff"
        android:layout_width="239dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="70dp"
        android:layout_marginRight="8dp"
        android:text="@string/create_account"
        android:textStyle="bold"
        android:textSize="18sp"
        android:elevation="3dp" />

    <TextView
        android:text="@string/signup_text"
        android:layout_width="339dp"
        android:layout_height="25dp"
        android:textColor="#28b463"
        android:id="@+id/login"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="100dp"
        android:layout_marginStart="95dp"
        android:textSize="16sp" />
    <TextView
        android:layout_width="351dp"

        android:layout_height="wrap_content"
        android:text=""
        android:id="@+id/Message"
        android:textColor="@android:color/holo_red_light"
        android:textSize="15sp"
        android:textAlignment="center" />
</LinearLayout>
